--- a/index.html
+++ b/index.html
@@ -19,19 +19,11 @@
     <header>
         <div class="header-content">
             <h1 id="header-title"></h1>
-            <p id="header-subtitle" class="subtitle"></p>
-            <div class="language-selector dropdown">
-                <button id="language-button">
-                    <img id="current-flag" src="flags/es.svg" alt="Idioma actual" />
-                </button>
-                <ul class="dropdown-menu" id="language-options">
-                    <li data-lang="es"><img src="assets/flags/es.svg" alt="Español" /> Español</li>
-                    <li data-lang="en"><img src="assets/flags/en.svg" alt="English" /> English</li>
-                    <li data-lang="fr"><img src="assets/flags/fr.svg" alt="Français" /> Français</li>
-                </ul>
-            </div>            
+            <p id="header-subtitle" class="subtitle"></p>           
         </div>
     </header>
+
+    <div id="language-selector"></div>
 
     <div class="loader-overlay" style="display: none;">
         <div class="loader-content">
@@ -47,13 +39,13 @@
                     <h2 data-i18n="menu.starters"></h2>
                 </div>
                 <div class="menu-item" onclick="location.href='main-courses.html'">
-                    <h2 data-i18n="menu.main_courses">Main Courses</h2>
+                    <h2 data-i18n="menu.main_courses"></h2>
                 </div>
                 <div class="menu-item" onclick="location.href='drinks.html'">
-                    <h2 data-i18n="menu.drinks">Drinks</h2>
+                    <h2 data-i18n="menu.drinks"></h2>
                 </div>
                 <div class="menu-item" onclick="location.href='desserts.html'">
-                    <h2 data-i18n="menu.desserts">Desserts</h2>
+                    <h2 data-i18n="menu.desserts"></h2>
                 </div>
             </div>
         </main>
@@ -99,5 +91,4 @@
     <script type="module" src="js/setup.js"></script>
     <script type="module" src="services/ProductService.js"></script>
 </body>
-
 </html>
