--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
     <!-- Own Styles -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="components/footer/footer.css" />
 </head>
 
 <body>
     <header>
         <div class="header-content">
             <h1 id="header-title"></h1>
-            <p id="header-subtitle" class="subtitle"></p>           
+            <p id="header-subtitle" class="subtitle"></p>
         </div>
     </header>
 
@@ -63,16 +64,7 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer-content">
-            <h3 id="footer-title"></h3>
-            <p id="footer-description"></p>
-            <div class="social-links" id="social-links-container">
-                <!-- Enlaces sociales generados dinámicamente -->
-            </div>
-            <p id="copyright"></p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
 
     <!-- Cargar primero los scripts de terceros -->
     <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
@@ -91,4 +83,5 @@
     <script type="module" src="js/setup.js"></script>
     <script type="module" src="services/ProductService.js"></script>
 </body>
+
 </html>
