--- a/index.html
+++ b/index.html
@@ -13,16 +13,10 @@
 
     <!-- Own Styles -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="components/footer/footer.css" />
 </head>
 
 <body>
-    <header>
-        <div class="header-content">
-            <h1 id="header-title"></h1>
-            <p id="header-subtitle" class="subtitle"></p>
-        </div>
-    </header>
+    <app-header></app-header>
 
     <language-selector></language-selector>
 
@@ -77,12 +71,14 @@
     <script type="module" src="config/config.js"></script>
 
     <!-- Luego los scripts propios -->
-    <script type="module" src="js/app.js"></script>
+    <!--<script type="module" src="js/app.js"></script>-->
 
     <!-- Script para aplicar la configuración -->
     <script type="module" src="js/setup.js"></script>
     <script type="module" src="services/ProductService.js"></script>
 
+    <!-- Modulos Propios -->
+    <script type="module" src="components/header/header.js"></script>
     <script type="module" src="components/language-selector/language-selector.js"></script>
     <script type="module" src="components/footer/footer.js"></script>
 </body>
