Added: Part of Full Menu component.

--- a/index.html
+++ b/index.html
@@ -27,24 +27,23 @@
         </div>
     </div>
 
-    <div class="container">
-        <main class="main-menu">
-            <div class="menu-grid">
-                <div class="menu-item" onclick="location.href='components/starters/starters.html'">
-                    <h2 data-i18n="menu.starters"></h2>
-                </div>
-                <div class="menu-item" onclick="location.href='main-courses.html'">
-                    <h2 data-i18n="menu.main_courses"></h2>
-                </div>
-                <div class="menu-item" onclick="location.href='drinks.html'">
-                    <h2 data-i18n="menu.drinks"></h2>
-                </div>
-                <div class="menu-item" onclick="location.href='desserts.html'">
-                    <h2 data-i18n="menu.desserts"></h2>
-                </div>
-            </div>
-        </main>
-        <!-- <div id="products-container" class="products-grid"></div> -->
+    <div class="menu-container">
+        <div class="menu-item top-left" onclick="location.href='components/starters/starters.html'">
+            Entrantes
+        </div>
+        <div class="menu-item top-right" onclick="location.href='main-courses.html'">
+            Plato Principal
+        </div>
+        <div class="menu-item bottom-left" onclick="location.href='drinks.html'">
+            Bebidas
+        </div>
+        <div class="menu-item bottom-right" onclick="location.href='desserts.html'">
+            Postres
+        </div>
+
+        <div class="center-circle" onclick="location.href='components/full-menu/full-menu.html'">
+            Full Menu
+        </div>
     </div>
 
     <div id="product-detail-modal" class="product-detail-modal">
