--- a/index.html
+++ b/index.html
@@ -27,16 +27,8 @@
         </div>
     </div>
 
-    <div class="menu-container">
-        <div class="menu-item top-left" data-i18n="menu.starters"
-            onclick="location.href='components/starters/starters.html'">Entrantes</div>
-        <div class="menu-item top-right" data-i18n="menu.main_courses" onclick="location.href='main-courses.html'">
-            PlatoPrincipal</div>
-        <div class="menu-item bottom-left" data-i18n="menu.drinks" onclick="location.href='drinks.html'">Bebidas</div>
-        <div class="menu-item bottom-right" data-i18n="menu.desserts" onclick="location.href='desserts.html'">Postres
-        </div>
-        <div class="center-circle" data-i18n="menu.full_menu"
-            onclick="location.href='components/full-menu/full-menu.html'">Full Menu</div>
+    <div id="main-content">
+        <service-menu></service-menu>
     </div>
 
     <app-footer></app-footer>
@@ -49,27 +41,6 @@
 
     <!-- Cargar la configuración -->
     <script type="module" src="./main.js"></script>
-
-    <!-- Luego los scripts propios -->
-    <!--<script type="module" src="js/app.js"></script>-->
-
-    <!-- Modulos Propios -->
-    <script type="module" src="./components/header/header.js"></script>
-    <script type="module" src="./components/language-selector/language-selector.js"></script>
-    <script type="module" src="./components/footer/footer.js"></script>
-
-    <script type="module">
-        import TranslationService from './assets/i18n/translationService.js';
-
-        // Cargar el idioma al cargar la página
-        await TranslationService.loadTranslations();
-        TranslationService.translatePage();
-
-        // Escuchar cambios de idioma (si otros componentes los disparan)
-        document.addEventListener('translationsReady', () => {
-            TranslationService.translatePage();
-        });
-    </script>
 </body>
 
 </html>
