Removed: Back-Button. Added: Mobile Navbar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <service-menu></service-menu>
     </div>
 
+    <mobile-navbar></mobile-navbar>
+
     <app-footer></app-footer>
 
     <!-- Cargar primero los scripts de terceros -->
